--- a/README.html
+++ b/README.html
@@ -409,7 +409,7 @@ $(document).ready(function () {
 <div id="what-is-does" class="section level2">
 <h2>What is does</h2>
 <p>It assists in automating the testing of terms in mixed models when <code>asreml-R</code> is used to fit the models. A history of the fitting of a sequence of models is kept in a data frame. Procedures are available for choosing models that conform to the hierarchy or marginality principle. It can also be used to display, in tables and graphs, predictions obtained from a mixed model using your favourite model fitting functions and to explore differences between predictions. As a general rule functions that are methods for <code>asreml</code> and <code>asrtests</code> objects require <code>asreml-R</code>; on the other hand, functions that are methods for <code>alldiffs</code> and <code>data.frame</code> objects do not require <code>asreml-R</code>.</p>
-<p>The use of the package is exemplified in two vignettes: the <a href="./vignettes/Wheat.pdf">Wheat vignette</a> that is accesssed using <code>vignette(&quot;Wheat&quot;, package = &quot;asremlPlus&quot;)</code> and the <a href="./vignettes/Ladybird.pdf">Ladybird vignette</a> is available via <code>vignette(&quot;Ladybird&quot;, package = &quot;asremlPlus&quot;)</code>.</p>
+<p>The use of the package is exemplified in two vignettes: the <a href="./vignettes/Wheat.pdf">Wheat vignette</a> that is accesssed using <code>vignette(&quot;Wheat&quot;, package = &quot;asremlPlus&quot;)</code> and the <a href="./vignettes/Ladybird.pdf">Ladybird vignette</a> that is available via <code>vignette(&quot;Ladybird&quot;, package = &quot;asremlPlus&quot;)</code>.</p>
 <p>The content falls into the following natural groupings:</p>
 <ol style="list-style-type: lower-roman">
 <li><p>Data,</p></li>
